[package]
name = "lau-landauer-meter"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/SuperInstance/lau-landauer-meter"
description = "Landauer's principle for agents — compute cost = thermodynamic work = Fisher-Rao distance², lower-bounded by kT ln 2/bit"

[dependencies]
serde = { version = "1", features = ["derive"] }
nalgebra = "0.33"

[dev-dependencies]
serde_json = "1"
